Add ExecutionGroups that contain Stages with ranged env values #88
Squashed commit of the following:

commit 126670884b3abe26fe787101a784c6ca1da01948
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 13:04:43 2020 +0200

    Allow skipping in arbitary log files and not only for the most recent #88

commit aa2d38901be35c053c72787faa9faaeb3cfc5ff8
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:24:19 2020 +0200

    Consider workspaces shared within an execution group #88

commit d76086a5eb45dbaa28053f6ec7e7ce0ce9a8d51b
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:23:56 2020 +0200

    Do not auto-enqueue if there is a faile stage

commit 2a2278e4c90cfe165b21a5c17e15cb16f7cbf8d0
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:23:18 2020 +0200

    Add existsWorkspace method to ResourceManager

commit 3c31ca66653625b64a2d3b8ff1b1dea6b57cf403
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:22:25 2020 +0200

    Do not run an election as long as at least one stage is still preparing #88

commit 76d5f6484036aa953d0268e858f19e508c618ffe
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:21:54 2020 +0200

    Archive ExecutionGroups with failed stages #88

commit 6b93c01faefe8e4f6b6ad368be62c3cfb144366a
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:21:06 2020 +0200

    Remove @CheckReturnValue for with* methods

commit fa4797a80800d5d4d43a91cac0d62a66445e3f9a
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:19:22 2020 +0200

    Fix potential race conditions for pipeline updates and mark the start of a stage #88

commit 8e10a8b227b8318ffeeeeeb254c2e7a35e33b929
Author: Michael Watzko <michael.watzko@it-designers.de>
Date:   Fri Jul 24 11:18:54 2020 +0200

    Add Preparing State for when the stage was not yet started #88

commit ba80ca60f7318