@@ -1,20 +1,23 @@
 package de.itdesigners.winslow.fs;
 
-import de.itdesigners.winslow.api.pipeline.Action;
-import de.itdesigners.winslow.api.project.DeletionPolicy;
-import de.itdesigners.winslow.api.project.State;
+import de.itdesigners.winslow.api.pipeline.DeletionPolicy;
+import de.itdesigners.winslow.api.pipeline.State;
+import de.itdesigners.winslow.api.pipeline.WorkspaceConfiguration;
+import de.itdesigners.winslow.config.ExecutionGroup;
 import de.itdesigners.winslow.config.StageDefinition;
+import de.itdesigners.winslow.pipeline.ExecutionGroupId;
 import de.itdesigners.winslow.pipeline.Stage;
 import org.junit.Test;
-import org.springframework.lang.NonNull;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
 import static junit.framework.TestCase.assertEquals;
+import static junit.framework.TestCase.assertTrue;
 
 public class ObsoleteWorkspaceFinderTest {
 
@@ -37,22 +40,21 @@ public class ObsoleteWorkspaceFinderTest {
     @Test
     public void testConsiderContinuedWorkspaces() {
         var history = List.of(
-                constructFinishedStage("workspace1", State.Succeeded),
-                constructFinishedStage("workspace2", State.Failed),
-                constructFinishedStage("workspace2", State.Failed),
-                constructFinishedDiscardableStage("workspace2", Action.Execute, State.Succeeded),
-                constructFinishedStage("workspace3", State.Failed)
+                constructFinishedStage("workspace1", State.Succeeded), // cannot because first successful normal (counter)
+                constructFinishedStage("workspace2", State.Failed), // cannot be deleted because of below
+                constructFinishedStage("workspace2", State.Failed), // cannot be deleted because of below
+                constructFinishedDiscardableStage(false, "workspace2", State.Succeeded), // cannot be discarded because first successful one (ignores counter)
+                constructFinishedStage("workspace3", State.Failed) // cannot be deleted because missing follow-up
         );
 
         var obsolete = new ObsoleteWorkspaceFinder(new DeletionPolicy(false, 1))
                 .withExecutionHistory(history)
                 .collectObsoleteWorkspaces();
 
-        var expected = new ArrayList<>(List.of("workspace3", "workspace1"));
-        assertEquals(expected.size(), obsolete.size());
-        expected.removeAll(obsolete);
-        assertEquals(Collections.emptyList(), expected);
-
+        assertEquals(
+                obsolete,
+                Collections.emptyList()
+        );
     }
 
     @Test
@@ -109,7 +111,7 @@ public class ObsoleteWorkspaceFinderTest {
                 // keep: because of below
                 constructFinishedStage("workspace2", State.Failed),
                 // keep: because of below
-                constructFinishedDiscardableStage("workspace2", Action.Execute, State.Succeeded),
+                constructFinishedDiscardableStage(false, "workspace2", State.Succeeded),
                 // keep: because of below
                 constructFinishedStage("workspace2", State.Succeeded),
                 // keep: second successful
@@ -125,7 +127,7 @@ public class ObsoleteWorkspaceFinderTest {
                 .withExecutionHistory(history)
                 .collectObsoleteWorkspaces();
 
-        var expected = new ArrayList<>(List.of("workspace4", "workspace1"));
+        var expected = new ArrayList<>(List.of("workspace1"));
         assertEquals(expected.size(), obsolete.size());
         expected.removeAll(obsolete);
         assertEquals(Collections.emptyList(), expected);
@@ -136,19 +138,19 @@ public class ObsoleteWorkspaceFinderTest {
     public void testConsiderContinuedWorkspacesComplex2() {
         var history = List.of(
                 constructFinishedStage("workspace1", State.Succeeded), // keep: second non-discardable successful
-                constructFinishedStage("workspace2", State.Failed), // keep: because of below
-                constructFinishedStage("workspace2", State.Failed), // keep: because of below
-                constructFinishedDiscardableStage("workspace2", Action.Execute, State.Succeeded), // delete: discardable
+                constructFinishedStage("workspace2", State.Failed), // delete: because of below
+                constructFinishedStage("workspace2", State.Failed), // delete: because of below
+                constructFinishedDiscardableStage(false, "workspace2", State.Succeeded), // delete: discardable with succcessful follow-up
                 constructFinishedStage("workspace3", State.Succeeded), // keep:  first successful
                 constructFinishedStage("workspace3", State.Failed), // keep: because of above
-                constructFinishedStage("workspace4", State.Failed) // delete: do not keep failed stages
+                constructFinishedStage("workspace4", State.Failed) // keep: most recent without successful follow-up
         );
 
         var obsolete = new ObsoleteWorkspaceFinder(new DeletionPolicy(false, 2))
                 .withExecutionHistory(history)
                 .collectObsoleteWorkspaces();
 
-        var expected = new ArrayList<>(List.of("workspace4", "workspace2"));
+        var expected = new ArrayList<>(List.of("workspace2"));
         assertEquals(expected.size(), obsolete.size());
         expected.removeAll(obsolete);
         assertEquals(Collections.emptyList(), expected);
@@ -191,8 +193,13 @@ public class ObsoleteWorkspaceFinderTest {
                 .withExecutionHistory(history)
                 .collectObsoleteWorkspaces();
 
-        assertEquals(3, list.size());
-        assertEquals(List.of("workspace2", "workspace3", "workspace5"), list);
+        var expected = new ArrayList<>(List.of("workspace2", "workspace3"));
+        assertEquals(expected.size(), list.size());
+        expected.removeAll(list);
+        assertEquals(
+                Collections.emptyList(),
+                expected
+        );
     }
 
     @Test
@@ -218,8 +225,18 @@ public class ObsoleteWorkspaceFinderTest {
                 .withExecutionHistory(history)
                 .collectObsoleteWorkspaces();
 
-        assertEquals(3, list.size());
-        assertEquals(List.of("workspace1", "workspace4", "workspace6"), list);
+        assertEquals(6, list.size());
+        assertEquals(
+                List.of(
+                        "workspace1",
+                        "workspace2",
+                        "workspace3",
+                        "workspace4",
+                        "workspace5",
+                        "workspace6"
+                ),
+                list
+        );
     }
 
     @Test
@@ -241,10 +258,10 @@ public class ObsoleteWorkspaceFinderTest {
     @Test
     public void testProperlyConsidersDiscardable() {
         var history = List.of(
-                constructFinishedDiscardableStage("workspace1", Action.Execute, State.Succeeded),
-                constructFinishedDiscardableStage("workspace2", Action.Execute, State.Succeeded),
-                constructFinishedDiscardableStage("workspace3", Action.Execute, State.Failed),
-                constructFinishedDiscardableStage("workspace4", Action.Execute, State.Succeeded)
+                constructFinishedDiscardableStage(false, "workspace1", State.Succeeded),
+                constructFinishedDiscardableStage(false, "workspace2", State.Succeeded),
+                constructFinishedDiscardableStage(false, "workspace3", State.Failed),
+                constructFinishedDiscardableStage(false, "workspace4", State.Succeeded)
         );
 
         var obsolete = new ObsoleteWorkspaceFinder(new DeletionPolicy(true, null))
@@ -260,8 +277,8 @@ public class ObsoleteWorkspaceFinderTest {
     @Test
     public void testProperlyConsidersDiscardableAndDoesNotDeleteStagesWithoutSuccessfulFollowups() {
         var history = List.of(
-                constructFinishedDiscardableStage("workspace1", Action.Execute, State.Succeeded),
-                constructFinishedDiscardableStage("workspace2", Action.Execute, State.Failed)
+                constructFinishedDiscardableStage(false, "workspace1", State.Succeeded),
+                constructFinishedDiscardableStage(false, "workspace2", State.Failed)
         );
 
         assertEquals(
@@ -275,8 +292,8 @@ public class ObsoleteWorkspaceFinderTest {
     @Test
     public void testProperlyConsidersDiscardableAndDoesNotDeleteWhenFollowUpIsAConfigureStage() {
         var history = List.of(
-                constructFinishedDiscardableStage("workspace1", Action.Execute, State.Succeeded),
-                constructFinishedDiscardableStage("workspace2", Action.Configure, State.Succeeded)
+                constructFinishedDiscardableStage(false, "workspace1", State.Succeeded),
+                constructFinishedDiscardableStage(true, "workspace2", State.Succeeded)
         );
 
         assertEquals(
@@ -288,73 +305,41 @@ public class ObsoleteWorkspaceFinderTest {
     }
 
 
-    @NonNull
-    private static Stage constructFinishedStage(
-            @NonNull String workspace,
-            @NonNull State finishState) {
-        return new Stage(
-                "some-id",
-                new StageDefinition(
-                        "some-definition",
-                        null,
-                        null,
-                        null,
-                        null,
-                        null,
-                        null,
-                        null,
-                        null
-                ),
-                Action.Execute,
-                new Date(0L),
-                workspace,
-                new Date(),
-                finishState,
-                null,
-                null,
-                null,
-                null,
-                null
-        );
+    @Nonnull
+    private static ExecutionGroup constructFinishedStage(
+            @Nonnull String workspace,
+            @Nonnull State finishState) {
+        return constructFinishedStage(false, null, workspace, finishState);
     }
 
-    @NonNull
-    private static Stage constructFinishedConfigureStage(
-            @NonNull String workspace,
-            @NonNull State finishState) {
-        return new Stage(
-                "some-id",
-                new StageDefinition(
-                        "some-definition",
-                        null,
-                        null,
-                        null,
-                        null,
-                        null,
-                        null,
-                        null,
-                        null
-                ),
-                Action.Configure,
-                new Date(0L),
-                workspace,
-                new Date(),
-                finishState,
-                null,
-                null,
-                null,
-                null,
-                null
-        );
+    @Nonnull
+    private static ExecutionGroup constructFinishedConfigureStage(
+            @Nonnull String workspace,
+            @Nonnull State finishState) {
+        return constructFinishedStage(true, null, workspace, finishState);
     }
 
-    @NonNull
-    private static Stage constructFinishedDiscardableStage(
-            @NonNull String workspace,
-            @Nonnull Action action,
-            @NonNull State finishState) {
-        return new Stage(
-                "some-id",
+    @Nonnull
+    private static ExecutionGroup constructFinishedDiscardableStage(
+            boolean configureOnly,
+            @Nonnull String workspace,
+            @Nonnull State finishState) {
+        return constructFinishedStage(configureOnly, true, workspace, finishState);
+    }
+
+    @Nonnull
+    private static ExecutionGroup constructFinishedStage(
+            boolean configureOnly,
+            @Nullable Boolean discardable,
+            @Nonnull String workspace,
+            @Nonnull State finishState) {
+        var group = new ExecutionGroup(
+                new ExecutionGroupId(
+                        "randomish-project",
+                        0,
+                        "randomish-human-readable"
+                ),
+                configureOnly,
                 new StageDefinition(
                         "some-definition",
                         null,
@@ -363,19 +348,25 @@ public class ObsoleteWorkspaceFinderTest {
                         null,
                         null,
                         null,
-                        Boolean.TRUE,
+                        discardable,
                         null
                 ),
-                action,
-                new Date(0L),
+                null,
+                new WorkspaceConfiguration(WorkspaceConfiguration.WorkspaceMode.INCREMENTAL, null, null),
+                new ArrayList<>(),
+                0
+        );
+        group.addStage(new Stage(
+                group.getId().generateStageId(0),
+                new Date(0),
                 workspace,
                 new Date(),
                 finishState,
                 null,
                 null,
                 null,
-                null,
                 null
-        );
+        ));
+        return group;
     }
 }
